...
    'western',
    'asian',
    'european',
  ];

  static String regionLabel(String region) => switch (region) {
    'all' => 'All',
    'african' => 'African',
    'western' => 'Western',
    'asian' => 'Asian',
    'european' => 'European',
    _ => 'Other',
  };
}
...
